@@ -83,18 +83,23 @@ namespace Orthanc
     const char* uri = lua_tostring(state, 1);
     bool builtin = (nArgs == 2 ? lua_toboolean(state, 2) != 0 : false);
 
-    std::string result;
-    if (HttpToolbox::SimpleGet(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
-                               RequestOrigin_Lua, uri))
+    try
     {
-      lua_pushlstring(state, result.c_str(), result.size());
+      std::string result;
+      if (HttpToolbox::SimpleGet(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
+                                 RequestOrigin_Lua, uri))
+      {
+        lua_pushlstring(state, result.c_str(), result.size());
+        return 1;
+      }
     }
-    else
+    catch (OrthancException& e)
     {
-      LOG(ERROR) << "Lua: Error in RestApiGet() for URI: " << uri;
-      lua_pushnil(state);
+      LOG(ERROR) << "Lua: " << e.What();
     }
 
+    LOG(ERROR) << "Lua: Error in RestApiGet() for URI: " << uri;
+    lua_pushnil(state);
     return 1;
   }
 
@@ -127,21 +132,26 @@ namespace Orthanc
     const char* bodyData = lua_tolstring(state, 2, &bodySize);
     bool builtin = (nArgs == 3 ? lua_toboolean(state, 3) != 0 : false);
 
-    std::string result;
-    if (isPost ?
-        HttpToolbox::SimplePost(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
-                                RequestOrigin_Lua, uri, bodyData, bodySize) :
-        HttpToolbox::SimplePut(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
-                               RequestOrigin_Lua, uri, bodyData, bodySize))
+    try
     {
-      lua_pushlstring(state, result.c_str(), result.size());
+      std::string result;
+      if (isPost ?
+          HttpToolbox::SimplePost(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
+                                  RequestOrigin_Lua, uri, bodyData, bodySize) :
+          HttpToolbox::SimplePut(result, serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
+                                 RequestOrigin_Lua, uri, bodyData, bodySize))
+      {
+        lua_pushlstring(state, result.c_str(), result.size());
+        return 1;
+      }
     }
-    else
+    catch (OrthancException& e)
     {
-      LOG(ERROR) << "Lua: Error in " << (isPost ? "RestApiPost()" : "RestApiPut()") << " for URI: " << uri;
-      lua_pushnil(state);
+      LOG(ERROR) << "Lua: " << e.What();
     }
 
+    LOG(ERROR) << "Lua: Error in " << (isPost ? "RestApiPost()" : "RestApiPut()") << " for URI: " << uri;
+    lua_pushnil(state);
     return 1;
   }
 
@@ -185,16 +195,22 @@ namespace Orthanc
     const char* uri = lua_tostring(state, 1);
     bool builtin = (nArgs == 2 ? lua_toboolean(state, 2) != 0 : false);
 
-    if (HttpToolbox::SimpleDelete(serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
-                                  RequestOrigin_Lua, uri))
+    try
     {
-      lua_pushboolean(state, 1);
+      if (HttpToolbox::SimpleDelete(serverContext->GetHttpHandler().RestrictToOrthancRestApi(builtin), 
+                                    RequestOrigin_Lua, uri))
+      {
+        lua_pushboolean(state, 1);
+        return 1;
+      }
     }
-    else
+    catch (OrthancException& e)
     {
-      LOG(ERROR) << "Lua: Error in RestApiDelete() for URI: " << uri;
+      LOG(ERROR) << "Lua: " << e.What();
+    }
+
+    LOG(ERROR) << "Lua: Error in RestApiDelete() for URI: " << uri;
       lua_pushnil(state);
-    }
 
     return 1;
   }
@@ -316,7 +332,7 @@ namespace Orthanc
   {
     Json::Value operations;
     LuaFunctionCall call2(lua_, "_AccessJob");
-    call2.ExecuteToJson(operations);
+    call2.ExecuteToJson(operations, false);
      
     if (operations.type() != Json::arrayValue)
     {
